--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        username: <div id="userName"></div >
        langage <div id="langage"></div>
     </div>
-    <img src="/asset/WhatsApp Image 2025-01-08 à 04.40.54_ee12ad81.jpg" alt="">
+    <img src="/asset/WhatsApp Image 2025-01-08 à 04.40.54_ee12ad81.jpg" alt="" id="image">
     <script src="/script.js"></script>
 </body>
 </html>
