--- a/index.html
+++ b/index.html
@@ -61,7 +61,15 @@
        username: <div id="userName"></div >
        langage <div id="langage"></div>
     </div>
-    <img src="/asset/WhatsApp Image 2025-01-08 à 04.40.54_ee12ad81.jpg" alt="" id="image">
+    <img src="/asset/WhatsApp Image 2025-01-08 à 04.40.54_ee12ad81.jpg" alt="" id="image" width="100px" height="100px">
+
+
+
+  <form action="">
+    <input type="text" id="input" placeholder="entrer vitre nom"> <br><br><br>
+    <label for="nom">Nom</label>
+    <input type="text" id="nom" name="nom">
+  </form><br><br>
     <script src="/script.js"></script>
 </body>
 </html>
